--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId "com.example.android.movielist"
+        applicationId "com.example.android.andriod_me"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
@@ -28,7 +28,7 @@ android {
 
 
 dependencies {
-
+    implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:recyclerview-v7:26.1.0'
