--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
+        <activity
+            android:name="com.example.android.android_me.ui.DetailActivity"
+            android:parentActivityName="com.example.android.android_me.ui.DetailActivity"
+            >
+        </activity>
 
     </application>
 
