--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         </activity>
         <activity
             android:name="com.example.android.android_me.ui.DetailActivity"
+            android:parentActivityName="com.example.android.android_me.ui.MainActivity"
+            >
+        </activity>
+        <activity
+            android:name="com.example.android.android_me.ui.StepDetailActivity"
             android:parentActivityName="com.example.android.android_me.ui.DetailActivity"
             >
         </activity>
