--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,24 +10,33 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.android.android_me.ui.MainActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.example.android.android_me.ui.DetailActivity"
-            android:parentActivityName="com.example.android.android_me.ui.MainActivity"
-            >
-        </activity>
-        <activity
-            android:name="com.example.android.android_me.ui.StepDetailActivity"
-            android:parentActivityName="com.example.android.android_me.ui.DetailActivity"
-            >
-        </activity>
 
+        <service
+            android:name=".GridWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <activity
+            android:name=".ui.DetailActivity"
+            android:parentActivityName=".ui.MainActivity"></activity>
+        <activity
+            android:name=".ui.StepDetailActivity"
+            android:parentActivityName=".ui.DetailActivity"></activity>
+
+        <receiver android:name="com.example.android.andriod_me.BakingAppWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/baking_app_widget_provider_info" />
+        </receiver>
     </application>
 
 </manifest>
