--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name="com.example.android.andriod_me.ReceiptService" />
 
         <service
-            android:name=".GridWidgetService"
+            android:name="com.example.android.andriod_me.GridWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
         <activity
             android:name=".ui.DetailActivity"
